# Stacklang

./: CMakeLists.txt  README.md
examples/: input3.lang  input4.lang  input5.lang  input6.lang  input7.lang
src/: main.cpp
src/interpreter/: CMakeLists.txt
src/interpreter/include/interpreter/: config.hpp  interpreter_interface.hpp
src/interpreter/src/: interpreter.cpp  interpreter.hpp
src/lexer/: CMakeLists.txt
src/lexer/include/lexer/: lexer_interface.hpp  location.hpp  token.hpp  tokens.hpp
src/lexer/src/: lexer.cpp  lexer.hpp  token.cpp
src/parser/: CMakeLists.txt
src/parser/include/parser/: ast_nodes.hpp  parser_interface.hpp
src/parser/src/: ast_nodes.cpp  parser.cpp  parser.hpp
tests/: CMakeLists.txt
tests/lexer/: CMakeLists.txt  lexer_test.cpp
tests/parser/: CMakeLists.txt  parser_test.cpp
